--- a/views/menu.html
+++ b/views/menu.html
@@ -14,61 +14,75 @@
 
     <div class="box-body table-responsive no-padding">
         <table class="table table-hover">
-            <tbody id="newsbody"><tr>
+              <tr>
                 <th>ID</th>
                 <th>MenuName</th>
-                <th>CollectNumber</th>
-                <th>DishNumber</th>
+                <th>CreateDate</th>
+                <th>UserName</th>
                 <th>Del</th>
             </tr>
-
-            <tr class="th">
-                <td>10</td>
-                <td>歌姬</td>
-                <td>2018-04-27</td>
-                <td>一起来聆听吧</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
+            <tbody id="content">
+            {{range $i,$v := .object.Object}}
+            <tr >
+                <td>{{$v.Id}}</td>
+                <td>{{$v.MenuName}}</td>
+                <td>{{$v.CreateDate}}</td>
+                <td>{{$v.Name}}</td>
+                <td class=""><a class="fa fa-close myclose" value="{{$v.Id}}" ></a></td>
             </tr>
-
-            <tr class="th">
-                <td>3</td>
-                <td>加热比海盗来啦！</td>
-                <td>2018-04-26</td>
-                <td>5年的史诗巨作</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
-            <tr class="th">
-                <td>4</td>
-                <td>劳拉O(∩_∩)O哈哈~</td>
-                <td>2018-04-26</td>
-                <td>古墓古墓古墓重要的事情说三遍！！！</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
-            <tr class="th">
-                <td>5</td>
-                <td>环太平洋</td>
-                <td>2018-04-26</td>
-                <td>特效风暴来袭</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
-            </tbody></table>
+            {{end}}
+            </tbody>
+        </table>
     </div>
 
     <div class="box-footer clearfix">
-        <ul class="pagination pagination-sm no-margin pull-right" id="newspage">
-
-            <li class="disabled page" id="prev" value="0"><a href="#">&lt;&lt;</a></li>
-
-            <li class=""><a href="#" id="pages">1</a></li>
-
-            <li class="page" id="next" value="1"><a href="#">&gt;&gt;</a></li>
-
+        <ul class="pagination pagination-sm no-margin pull-right" id="mypage" url={{.url}}>
+                {{if  .object.Pref}}
+                    <li class="page" id="prev" value=0><a href="#"  ><<</a></li>
+                {{else}}
+                    <li class="disabled page" id="prev" value=0><a href="#" ><<</a></li>
+                {{end}}
+                    <li class=""><a href="#" id="pages" >{{.object.Page}}</a></li>
+                {{if  .object.Next}}
+                    <li class="page" id="next" value=1><a href="#"  >>></a></li>
+                {{else}}
+                    <li class="disabled page" id="next" value=1><a href="#" >>></a></li>
+                {{end}}
         </ul>
     </div>
 </div>
+
+<script type="text/javascript">
+        // 准备字符串
+    function PrepareString(result){
+        console.log(result)
+        for (var i = 0;i<result.Object.length;i++){
+             var text = " <tr>"+
+                    "<td>"+result.Object[i].Id+"</td>"+
+                    "<td>"+result.Object[i].MenuName+"</td>"+
+                    "<td>"+result.Object[i].CreateDate+"</td>"+
+                    "<td>"+result.Object[i].Name+"</td>"+
+                    "<td class=><a class='fa fa-close myclose' value='"+result.Object[i].Id+"'></a></td>"
+                "</tr>"
+            $("#content").append(text)
+        }
+    }
+
+    function Delete(id){
+        $.ajax({
+            url: '/menu/delete',
+            type: 'get',
+            dataType: 'json',
+            data: {"menuid": id},
+            success:function(result){
+                if (result.Ret != 200){
+                    alert(result.Msg)
+                    return false
+                }
+            }
+        })        
+    }
+</script>
 
 <!-- <h3>发布菜单</h3>
 <div class="callout callout-success">
