--- a/views/systemuser.html
+++ b/views/systemuser.html
@@ -14,58 +14,39 @@
 
     <div class="box-body table-responsive no-padding">
         <table class="table table-hover">
-            <tbody id="newsbody"><tr>
+            <tr>
                 <th>ID</th>
                 <th>管理员</th>
                 <th>类型</th>
                 <th>创建时间</th>
                 <th>Del</th>
             </tr>
-
+            <tbody id="content">
+            {{range $i,$v := .object.Object}}
             <tr class="th">
-                <td>10</td>
-                <td>歌姬</td>
-                <td>2018-04-27</td>
-                <td>一起来聆听吧</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
+                <td>{{$v.Id}}</td>
+                <td>普通管理员</td>
+                <td>{{$v.Account}}</td>
+                <td>{{$v.CreateTime}}</td>
+                <td class=""><a class="fa fa-close myclose" value="{{$v.Id}}"></a></td>
             </tr>
-
-            <tr class="th">
-                <td>3</td>
-                <td>加热比海盗来啦！</td>
-                <td>2018-04-26</td>
-                <td>5年的史诗巨作</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
-            <tr class="th">
-                <td>4</td>
-                <td>劳拉O(∩_∩)O哈哈~</td>
-                <td>2018-04-26</td>
-                <td>古墓古墓古墓重要的事情说三遍！！！</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
-            <tr class="th">
-                <td>5</td>
-                <td>环太平洋</td>
-                <td>2018-04-26</td>
-                <td>特效风暴来袭</td>
-                <td class=""><a class="fa fa-close" value="3"></a></td>
-            </tr>
-
+            {{end}}
             </tbody></table>
     </div>
 
     <div class="box-footer clearfix">
-        <ul class="pagination pagination-sm no-margin pull-right" id="newspage">
-
-            <li class="disabled page" id="prev" value="0"><a href="#">&lt;&lt;</a></li>
-
-            <li class=""><a href="#" id="pages">1</a></li>
-
-            <li class="page" id="next" value="1"><a href="#">&gt;&gt;</a></li>
-
+       <ul class="pagination pagination-sm no-margin pull-right" id="mypage" url={{.url}}>
+            {{if  .object.Pref}}
+                <li class="page" id="prev" value=0><a href="#"  ><<</a></li>
+            {{else}}
+                <li class="disabled page" id="prev" value=0><a href="#" ><<</a></li>
+            {{end}}
+                <li class=""><a href="#" id="pages" >{{.object.Page}}</a></li>
+            {{if  .object.Next}}
+                <li class="page" id="next" value=1><a href="#"  >>></a></li>
+            {{else}}
+                <li class="disabled page" id="next" value=1><a href="#" >>></a></li>
+            {{end}}
         </ul>
     </div>
 </div>
@@ -97,16 +78,16 @@
                     <h4 class="text-center">申请单</h4>
                     <div class="form-group">
                         <label>请输入账户名</label>
-                        <input type="text" name="" class="form-control" >
+                        <input type="text" name="" class="form-control" id="account" >
                         <span class="hidden"></span>
                     </div>
                     <div class="form-group">
                         <label>请输入密码</label>
-                        <input type="text" name="" class="form-control" >
+                        <input type="text" name="" class="form-control" id="pwd" >
                         <span class="hidden"></span>
                     </div>
                     <div>
-                        <button class="btn btn-info pull-right" type="button">Create</button>
+                        <button class="btn btn-info pull-right" type="button" id="create">Create</button>
                     </div>
                  </form>
             </div>
@@ -118,3 +99,60 @@
           </div>
           </div>
           </div>
+  <script type="text/javascript">
+        function PrepareString(result){
+            console.log(result)
+            for (var i = 0;i<result.Object.length;i++){
+                 var text = " <tr>"+
+                        "<td>"+result.Object[i].Id+"</td>"+
+                        "<td>普通管理员</td>"+
+                        "<td>"+result.Object[i].Account+"</td>"+
+                        "<td>"+result.Object[i].CreateTime+"</td>"+
+                        "<td class=><a class='fa fa-close myclose' value='"+result.Object[i].Id+"'></a></td>"
+                    "</tr>"
+                $("#content").append(text)
+            }
+        }
+
+         $("#create").click(function(){
+            var account = $("#account").val()
+            var pwd = $("#pwd").val()
+            if (account == "" || pwd == ""){
+                alert("选项不能为空")
+                return
+            }
+            $.ajax({
+                url: '/sysuser/addadmin',
+                type: 'post',
+                dataType:'json',
+                data: {"account": account,"pwd":pwd},
+                success:function(result){
+                  console.log(12321321)
+                    if (result.Ret == 200){
+                      alert("创建成功")
+                      location.reload()
+                      return
+                    }
+                    alert(result.Msg)
+                }
+            })
+        })
+
+    function Delete(id){
+        console.log(id)
+        $.ajax({
+            url: '/sysuser/delete',
+            type: 'get',
+            dataType: 'json',
+            data: {"id":id},
+
+            success:function(result){
+                if (result.Ret != 200) {
+                    alert(result.Msg)
+                    return false
+                }
+            }
+        })
+    }
+
+  </script>
