--- a/views/user.html
+++ b/views/user.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
     new Chart(document.getElementById("chartjs-4"),
         {"type":"doughnut","data":{"labels":["昨日注册人数","总人数","今日注册人数"],
-         "datasets":[{"label":"My First Dataset","data":[120,120,120],
+         "datasets":[{"label":"My First Dataset","data":[{{.nums.YesterdayNum}},{{.nums.TotalNum}},{{.nums.TodayNum}}],
         "backgroundColor":["rgb(255, 99, 132)","rgb(54, 162, 235)","rgb(255, 205, 86)"]
         }]}});
     new Chart(document.getElementById("chartjs-5"),
