--- a/views/user.html
+++ b/views/user.html
@@ -11,7 +11,7 @@
         }]}});
     new Chart(document.getElementById("chartjs-5"),
             {"type":"doughnut","data":{"labels":["昨日留言","总留言","今日留言"],
-                    "datasets":[{"label":"My First Dataset","data":[120,120,120],
+                    "datasets":[{"label":"My First Dataset","data":[{{.counts.YesterdayNum}},{{.counts.TotalNum}},{{.counts.TodayNum}}],
                         "backgroundColor":["rgb(255, 99, 132)","rgb(54, 162, 235)","rgb(255, 205, 86)"]
             }]}});
 </script>
