--- a/views/news.html
+++ b/views/news.html
@@ -3,10 +3,10 @@
         <h3 class="box-title">公告列表</h3>
         <div class="box-tools">
             <div class="input-group input-group-sm" style="width: 150px;">
-                <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                <input type="text" name="table_search" class="form-control pull-right" placeholder="Search" id="searchnumber">
 
                 <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                    <button type="submit" class="btn btn-default" id="searchnumbers"><i class="fa fa-search"></i></button>
                 </div>
             </div>
         </div>
