--- a/views/user.html
+++ b/views/user.html
@@ -26,10 +26,10 @@
 
                 <div class="box-tools">
                     <div class="input-group input-group-sm" style="width: 150px;">
-                        <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                        <input type="text" name="table_search" class="form-control pull-right" placeholder="Search"  id="searchnumber">
 
                         <div class="input-group-btn">
-                            <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                            <button type="submit" class="btn btn-default" id="searchnumbers"><i class="fa fa-search"></i></button>
                         </div>
                     </div>
                 </div>
@@ -128,4 +128,7 @@
     $(document).on("click",".remove",function () {
         $(this).parent().parent().parent().remove()
     })
+    //搜索方法
+
+
 </script>
