--- a/views/menu.html
+++ b/views/menu.html
@@ -6,7 +6,7 @@
                 <input type="text" name="table_search" class="form-control pull-right" placeholder="Search" id="searchnumber">
 
                 <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default" id="seaechnumbers"><i class="fa fa-search"></i></button>
+                    <button type="submit" class="btn btn-default" id="searchnumbers"><i class="fa fa-search"></i></button>
                 </div>
             </div>
         </div>
